Adição de imagem

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
-
-
     <div>
-        <h4 style="text-align: center;">Ativade Prática - Aula 10 da Matéria: </br> Prática Integradora Desenvolvimento
-            de Apps</h4>
+        <h3 style="text-align: center;">Ativade Prática - Aula 10 da Matéria: </br>
+            Prática Integradora Desenvolvimento de Apps
+        </h3>
+    </div>
+
+    <div style="text-align: center;">
+        <img src="imagem/descomplica.png" alt="Logo Descomplica">
     </div>
 
 </body>
